--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/core": "latest",
+    "@react-pdf/renderer": "^1.0.0-alpha.15",
     "antd": "3.8.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-loadable": "^5.5.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "yoga-layout": "github:naminho/yoga-layout-windows"
   },
   "scripts": {
     "start": "react-app-rewired start",
